--- a/src/views/sighting/show.html
+++ b/src/views/sighting/show.html
@@ -1,10 +1,11 @@
-<h1>Sightings for Bill</h1>
+<h1>Viewing sighting #<%= sighting.id %></h1>
 <%- partial('../messages') %>
 <ul>
-	<!-- There is a problem here with pluralization, where mvc.js assigns sighting/sightings based on if it's index.html or not. Since this is inherently a list of sightings, this nomenclature is inaccurate, probably because it's contrary to
-	the spirit of the framework. Needs a refactor -->
-  <% sighting.forEach(function(sighting_fo_realz){ %>
- <!--    <li><a href="/sightings/HOW_TO_DISAMBIGUATE_BILL_ID_FROM_SIGHTING_ID/<%= sighting.id %>"><%= sighting_fo_realz.latitude %> <%= sighting_fo_realz.longitude %></a></li>
-  -->   <li><%= sighting_fo_realz.latitude %> <%= sighting_fo_realz.longitude %> - <%= sighting_fo_realz.comment %></li>
-  <% }) %>
+  <li>Serial: <%- sighting.serial %></li>
+  <li>Currency: <%- sighting.currency %></li>
+  <li>Denomination: <%- sighting.denomination %></li>
+  <li>Latitude: <%- sighting.latitude %></li>
+  <li>Longitude: <%- sighting.longitude %></li>
+  <li>Comment: <%- sighting.comment %></li>
+  <li><a href="<%= sighting.id %>/edit">Edit</a> this sighting</li>
 </ul>
