ugly but functional code for maps integration

--- a/src/views/sighting/edit.html
+++ b/src/views/sighting/edit.html
@@ -1,4 +1,4 @@
-<h1>New Sighting!</h1>
+<h1>Edit Sighting</h1>
 <%- partial('../messages') %>
 <form method="post" action="/sightings/<%= sighting.id %>">
   <input type="hidden" name="_method" value="put" />
