--- a/src/views/sighting/add.html
+++ b/src/views/sighting/add.html
@@ -1,3 +1,63 @@
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <article>
+      <p>Finding your location: <span id="status">checking...</span></p>
+    </article>
+
+<script>
+function success(position) {
+  var s = document.querySelector('#status');
+  
+  if (s.className == 'success') {
+    // not sure why we're hitting this twice in FF, I think it's to do with a cached result coming back    
+    return;
+  }
+  
+  s.innerHTML = "found you!";
+  s.className = 'success';
+  
+  var mapcanvas = document.createElement('div');
+  mapcanvas.id = 'mapcanvas';
+  mapcanvas.style.height = '400px';
+  mapcanvas.style.width = '560px';
+    
+  document.querySelector('article').appendChild(mapcanvas);
+  
+  var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+  var myOptions = {
+    zoom: 15,
+    center: latlng,
+    mapTypeControl: false,
+    navigationControlOptions: {style: google.maps.NavigationControlStyle.SMALL},
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+  var map = new google.maps.Map(document.getElementById("mapcanvas"), myOptions);
+  
+  var marker = new google.maps.Marker({
+      position: latlng, 
+      map: map, 
+      title:"You are here!"
+  });
+
+  document.getElementById("latitudeInput").value = position.coords.latitude;
+  document.getElementById("longitudeInput").value = position.coords.longitude;
+}
+
+function error(msg) {
+  var s = document.querySelector('#status');
+  s.innerHTML = typeof msg == 'string' ? msg : "failed";
+  s.className = 'fail';
+  
+  // console.log(arguments);
+}
+
+if (navigator.geolocation) {
+  navigator.geolocation.getCurrentPosition(success, error);
+} else {
+  error('not supported');
+}
+
+</script>
+
 <h1>New Sighting!</h1>
 <%- partial('../messages') %>
 <form method="post" action="/sightings/<%= sighting.id %>">
@@ -5,8 +65,8 @@
   <p>Serial: <input type="text" name="sighting[serial]", value="<%= sighting.serial %>" /></p>
   <p>Currency: <input type="text" name="sighting[currency]", value="<%= bill.currency %>" /></p>
   <p>Denomination: <input type="text" name="sighting[denomination]", value="<%= bill.denomination %>" /></p>
-  <p>Latitude: <input type="text" name="sighting[latitude]", value="<%= sighting.latitude %>" /></p>
-  <p>Longitude: <input type="text" name="sighting[longitude]", value="<%= sighting.longitude %>" /></p>
+  <p>Latitude: <input type="text" id="latitudeInput" name="sighting[latitude]", value="<%= sighting.latitude %>" /></p>
+  <p>Longitude: <input type="text" id="longitudeInput" name="sighting[longitude]", value="<%= sighting.longitude %>" /></p>
   <p>Comment: <input type="text" name="sighting[comment]", value="<%= sighting.comment %>" /></p>
   <p><input type="submit" value="Update" /></p>
 </form>
