fix details page to use bill object to derive currency and denomination

--- a/src/views/sighting/show.html
+++ b/src/views/sighting/show.html
@@ -45,8 +45,8 @@ if (navigator.geolocation) {
 <%- partial('../messages') %>
 <ul>
   <li>Serial: <%- sighting.serial %></li>
-  <li>Currency: <%- sighting.currency %></li>
-  <li>Denomination: <%- sighting.denomination %></li>
+  <li>Currency: <%- bill.currency %></li>
+  <li>Denomination: <%- bill.denomination %></li>
   <li>Latitude: <%- sighting.latitude %></li>
   <li>Longitude: <%- sighting.longitude %></li>
   <li>Comment: <%- sighting.comment %></li>
