support for listing by bill serial, and linking to sightings by said serial... tweaks to main index

--- a/src/views/app/index.html
+++ b/src/views/app/index.html
@@ -1,10 +1,7 @@
-<h1>Application Index</h1>
-<p>Try visiting one of the following urls:</p>
+<h1>CashTracker (Temporary Name)</h1>
+<p>Begin with the following:</p>
 <ul>
-    <li><a href="/bills">/bills</a></li>
-    <li><a href="/bills/1">/bills/1</a></li>
-    <li><a href="/bills/1.json">/bills/1.json</a></li>
-    <li><a href="/bills/1/edit">/bills/1/edit</a></li>
-    <li><a href="/accounts">/accounts (404, non existent)</a></li>
-    <li><a href="/bills/1.foo">/bills/1.foo (500, unsupported format)</a></li>
+    <li><a href="/sightings">Make a new sighting</a></li>
+    <li><a href="/sightings">List all sightings</a></li>
+    <li><a href="/bills">List all bills</a></li>
 </ul>
