--- a/src/views/bill/show.html
+++ b/src/views/bill/show.html
@@ -1,7 +1,7 @@
-<h1>Bills</h1>
+<h1>History of Bill: <%= sightings[0].serial %></h1>
 <%- partial('../messages') %>
 <ul>
-  <% bills.forEach(function(bill){ %>
-    <li><a href="/bills/<%= bill.id %>"><%= bill.serial %></a></li>
+  <% sightings.forEach(function(sighting){ %>
+    <li><a href="/sightings/<%= sighting._id %>"><%= sighting.latitude %> <%= sighting.longitude %></a></li>
   <% }) %>
 </ul>
