--- a/src/views/app/index.html
+++ b/src/views/app/index.html
@@ -1,7 +1,7 @@
 <h1>CashTracker (Temporary Name)</h1>
 <p>Begin with the following:</p>
 <ul>
-    <li><a href="/sightings">Make a new sighting</a></li>
+    <li><a href="/sightings/add">Make a new sighting</a></li>
     <li><a href="/sightings">List all sightings</a></li>
     <li><a href="/bills">List all bills</a></li>
 </ul>
