facebook integration via everyauth, still some issues with the user object not persisting across view templates

--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-    <title>Express - MVC Example</title>
+    <title>CashTracker</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
+  <%- partial('header') %>
   <body>
     <%- body %>
   </body>
+  <%- partial('footer') %>
 </html>
