--- a/src/views/jade/messages.jade
+++ b/src/views/jade/messages.jade
@@ -1,5 +1,5 @@
 - if (hasMessages)
   ul#messages
-    - messages.forEach(function(msg){
+    - messages().forEach(function(msg){
       li= msg
     - })
