user account page, lists sightings and related bills

--- a/src/views/jade/bill/show.jade
+++ b/src/views/jade/bill/show.jade
@@ -1,10 +1,11 @@
 h1 History of Bill: 
     = sightings[0].serial
-!=partial('../messages')
+
 ul
   - sightings.forEach(function(sighting){
     li
         a(href="/sightings/#{sighting._id}") 
             = sighting.latitude + " "
-            = sighting.longitude
+            = sighting.longitude + " - "
+            = sighting.comment
   - })
