--- a/src/views/jade/layout.jade
+++ b/src/views/jade/layout.jade
@@ -4,6 +4,7 @@ html
       CashTracker
     link(rel="stylesheet", href="/style.css")
   !=partial('header')
+  !=partial('messages')
   body
     !=body
   !=partial('footer')
