--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -1,8 +1,7 @@
 script(src="http://maps.google.com/maps/api/js?sensor=false")
 script(src="/user_on_map.js")
 
-h1 Add New Sighting!
-!=partial('../messages')
+h1 Add New Sighting
 
 div#mapContainer
 
@@ -11,14 +10,14 @@ form(method="post", action="/sightings/!=sighting.id")
   p Serial: 
     input(type="text", name="sighting[serial]", value="#{sighting.serial}")
   p Currency: 
-    input(type="text", name="sighting[currency]", value="#{bill.currency}")
+    input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
   p Denomination: 
     input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
   p Latitude: 
     input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
   p Longitude: 
     input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
-  p Comment: 
+  p Comment (Optional): 
     input(type="text", name="sighting[comment]", value="#{sighting.comment}")
   p
     input(type="submit", value="Update")
