twitter bootstrap integration

--- a/src/views/jade/account/index.jade
+++ b/src/views/jade/account/index.jade
@@ -1,27 +1,33 @@
-h1 User Account
-- if (everyauth.loggedIn)
-    p Name: #{everyauth.facebook.user.name}
-    p FB ID: #{everyauth.facebook.user.id}
-    p CashTracker ID: #{everyauth.user.id}
+.page-header
+    h1 User Account
+        small yon vittles be waiting
+.row
+    .span10
+        - if (everyauth.loggedIn)
+            p Name: #{everyauth.facebook.user.name}
+            p FB ID: #{everyauth.facebook.user.id}
+            p CashTracker ID: #{everyauth.user.id}
 
-    h1 Your sightings
-    a(href="/sightings/add") Add New Sighting
+            h1 Your sightings
+            a(href="/sightings/add") Add New Sighting
 
-    ul
-      - sightings.forEach(function(sighting){
-        li
-            a(href="/sightings/#{sighting._id}") #{sighting.latitude} #{sighting.longitude} - #{sighting.comment}
-      - })
+            ul
+              - sightings.forEach(function(sighting){
+                li
+                    a(href="/sightings/#{sighting._id}") #{sighting.latitude} #{sighting.longitude} - #{sighting.comment}
+              - })
 
-    h1 Your related bills
+            h1 Your related bills
 
-    ul
-        - bills.forEach(function(bill){
-            li
-                a(href="/bills/#{bill.serial}")
-                    = bill.serial
-        - })
+            ul
+                - bills.forEach(function(bill){
+                    li
+                        a(href="/bills/#{bill.serial}")
+                            = bill.serial
+                - })
 
-- else
-    p You are not linked with your Facebook account yet. 
-        a(href="/auth/facebook") Log in via Facebook
+        - else
+            p You are not linked with your Facebook account yet. 
+                a(href="/auth/facebook") Log in via Facebook
+    .spain4
+        h3 Secondary content
