--- a/src/views/jade/app/index.jade
+++ b/src/views/jade/app/index.jade
@@ -1,8 +1,17 @@
-p Begin with the following:
-ul
-	li
-		a(href="/sightings/add") Make a new sighting
-	li
-		a(href="/sightings") List all sightings
-	li
-		a(href="/bills") List all bills
+.page-header
+    h1 Welcome 
+        small to the playground of the Johnny Appleseed of Cunt!
+.row
+    .span10
+        p Begin with the following:
+        ul
+            li
+                a(href="/sightings/add") Make a new sighting
+            li
+                a(href="/sightings") List all sightings
+            li
+                a(href="/bills") List all bills
+        h2 why!?
+        img(src="/images/ridiculous.jpg", alt="i don't know!")
+    .span4
+        h3  Secondary Content
