--- a/src/views/jade/header.jade
+++ b/src/views/jade/header.jade
@@ -1,1 +1,19 @@
-h1 CashTracker (Temporary Name)
+.topbar
+    .fill
+        .container
+            a.brand(href="/") CashTracker
+            ul.nav
+                li
+                    a(href="/") Home
+                li
+                    a(href="/sightings") Sightings
+                li
+                    a(href="/bills") Bills
+                li
+                    a(href="/account") Your Account
+            
+            //- TBI: Login w/o social networks
+            //- form.pull-right(action="")
+            //-     input.input-small(type="text", placeholder="Username")
+            //-     input.input-small(type="password", placeholder="Password")
+            //-     button.btn(type="submit") Sign In
