--- a/src/views/jade/bill/index.jade
+++ b/src/views/jade/bill/index.jade
@@ -1,8 +1,13 @@
-h1 Bills
-
-ul
-    - bills.forEach(function(bill){
-        li
-            a(href="/bills/#{bill.serial}")
-                = bill.serial
-    - })
+.page-header
+	h1 Bills in the System 
+		small as opposed to bills not in the system
+.row
+	.span10
+		ul
+			- bills.forEach(function(bill){
+				li
+					a(href="/bills/#{bill.serial}")
+						= bill.serial
+			- })
+	.span4
+		h3 Secondary content
