--- a/src/views/jade/bill/show.jade
+++ b/src/views/jade/bill/show.jade
@@ -1,11 +1,16 @@
-h1 History of Bill: 
-    = sightings[0].serial
-
-ul
-  - sightings.forEach(function(sighting){
-    li
-        a(href="/sightings/#{sighting._id}") 
-            = sighting.latitude + " "
-            = sighting.longitude + " - "
-            = sighting.comment
-  - })
+.page-header
+    h1 History of Bill: 
+        small
+            = sightings[0].serial
+.row
+    .span10
+        ul
+          - sightings.forEach(function(sighting){
+            li
+                a(href="/sightings/#{sighting._id}") 
+                    = sighting.latitude + " "
+                    = sighting.longitude + " - "
+                    = sighting.comment
+          - })
+    .span4
+        h3 Secondary content
