--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -1,23 +1,28 @@
-script(src="http://maps.google.com/maps/api/js?sensor=false")
-script(src="/user_on_map.js")
+.page-header
+  h1 Add New Sighting 
+    small another bill in action yarr
+.row
+  .span10
+    script(src="http://maps.google.com/maps/api/js?sensor=false")
+    script(src="/user_on_map.js")
 
-h1 Add New Sighting
+    div#mapContainer
 
-div#mapContainer
-
-form(method="post", action="/sightings/!=sighting.id")
-  input(type="hidden", name="_method", value="put")
-  p Serial: 
-    input(type="text", name="sighting[serial]", value="#{sighting.serial}")
-  p Currency: 
-    input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
-  p Denomination: 
-    input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
-  p Latitude: 
-    input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
-  p Longitude: 
-    input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
-  p Comment (Optional): 
-    input(type="text", name="sighting[comment]", value="#{sighting.comment}")
-  p
-    input(type="submit", value="Update")
+    form(method="post", action="/sightings/!=sighting.id")
+      input(type="hidden", name="_method", value="put")
+      p Serial: 
+        input(type="text", name="sighting[serial]", value="#{sighting.serial}")
+      p Currency: 
+        input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
+      p Denomination: 
+        input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
+      p Latitude: 
+        input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
+      p Longitude: 
+        input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
+      p Comment (Optional): 
+        input(type="text", name="sighting[comment]", value="#{sighting.comment}")
+      p
+        input(type="submit", value="Update")
+  .span4
+      h3 Secondary content
