--- a/src/views/jade/sighting/edit.jade
+++ b/src/views/jade/sighting/edit.jade
@@ -1,18 +1,23 @@
-h1 Edit Sighting
-
-form(method="post", action="/sightings/!=sighting.id")
-  input(type="hidden", name="_method", value="put")
-  p Serial:
-    input(type="text", name="sighting[serial]", value="#{sighting.serial}")
-  p Currency:
-    input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
-  p Denomination:
-    input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
-  p Latitude: 
-    input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
-  p Longitude:
-    input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
-  p Comment (Optional):
-    input(type="text", name="sighting[comment]", value="#{sighting.comment}")
-  p
-    input(type="submit", value="Update")  
+.page-header
+  h1 Edit Sighting 
+    small oh noes, uncle joe never lies!
+.row
+  .span10
+    form(method="post", action="/sightings/!=sighting.id")
+      input(type="hidden", name="_method", value="put")
+      p Serial:
+        input(type="text", name="sighting[serial]", value="#{sighting.serial}")
+      p Currency:
+        input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
+      p Denomination:
+        input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
+      p Latitude: 
+        input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
+      p Longitude:
+        input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
+      p Comment (Optional):
+        input(type="text", name="sighting[comment]", value="#{sighting.comment}")
+      p
+        input(type="submit", value="Update")
+  .span4
+      h3 Secondary content
