--- a/src/views/jade/sighting/index.jade
+++ b/src/views/jade/sighting/index.jade
@@ -1,8 +1,13 @@
-h1 Sightings
-a(href="/sightings/add") Add New Sighting
-
-ul
-  - sightings.forEach(function(sighting){
-    li
-        a(href="/sightings/#{sighting._id}") #{sighting.latitude} #{sighting.longitude} - #{sighting.comment}
-  - })
+.page-header
+    h1 Sightings 
+        small avast! thar be a sighting!
+.row
+    .span10
+        ul
+          - sightings.forEach(function(sighting){
+            li
+                a(href="/sightings/#{sighting._id}") #{sighting.latitude} #{sighting.longitude} - #{sighting.comment}
+          - })
+        a(href="/sightings/add") Add New Sighting
+    .span4
+        h3 Secondary content
