--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -23,6 +23,7 @@
       p Comment (Optional): 
         input(type="text", name="sighting[comment]", value="#{sighting.comment}")
       p
-        input(type="submit", value="Update")
+        button(class="btn primary", type="submit", value="Update") Fire away
+
   .span4
       h3 Secondary content
