--- a/src/views/jade/layout.jade
+++ b/src/views/jade/layout.jade
@@ -6,6 +6,9 @@ html
     //- link(rel="stylesheet/less", type="text/css", href="/bootstrap/bootstrap.less")
     link(href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.css", rel="stylesheet")
     // script(src="less-1.1.6.js", type="text/javascript")
+    script(type="text/javascript", src="http://use.typekit.com/hcc0mfz.js")
+    script(type="text/javascript")
+        try{Typekit.load();}catch(e){}
     link(type="text/css", rel="stylesheet", href="/bootstrap_styles.css")
   body
     !=partial('header')
