--- a/src/views/jade/app/index.jade
+++ b/src/views/jade/app/index.jade
@@ -3,6 +3,8 @@
         small to the playground of the Johnny Appleseed of Cunt!
 .row
     .span10
+        !=partial('messages')
+
         p Begin with the following:
         ul
             li
