--- a/src/views/jade/bill/index.jade
+++ b/src/views/jade/bill/index.jade
@@ -1,13 +1,15 @@
 .page-header
-	h1 Bills in the System 
-		small as opposed to bills not in the system
+    h1 Bills in the System 
+        small as opposed to bills not in the system
 .row
-	.span10
-		ul
-			- bills.forEach(function(bill){
-				li
-					a(href="/bills/#{bill.serial}")
-						= bill.serial
-			- })
-	.span4
-		h3 Secondary content
+    .span10
+        !=partial('messages')
+
+        ul
+            - bills.forEach(function(bill){
+                li
+                    a(href="/bills/#{bill.serial}")
+                        = bill.serial
+            - })
+    .span4
+        h3 Secondary content
