--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -3,10 +3,14 @@
     small another bill in action yarr
 .row
   .span10
+    !=partial('messages')
+
     script(src="http://maps.google.com/maps/api/js?sensor=false")
     script(src="/user_on_map.js")
 
     div#mapContainer
+
+    p
 
     form(method="post", action="/sightings/!=sighting.id")
       input(type="hidden", name="_method", value="put")
