--- a/src/views/jade/sighting/index.jade
+++ b/src/views/jade/sighting/index.jade
@@ -3,11 +3,43 @@
         small avast! thar be a sighting!
 .row
     .span10
+        !=partial('messages')
+
+        script(src="http://maps.google.com/maps/api/js?sensor=false")
+        script(src="/sighting_on_map.js")
+        script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+
+        script(type="text/javascript")
+            $(document).ready( function() {
+                // TO FIX: WHy is jQuery not helping here?
+                // map = createMap($("mapContainer"), 48.12, 13.22, 4) 
+                var map = createMap(document.getElementById('mapContainer'), 48.12, 13.22, 4) 
+
+                // TO FIX: Hijacking invisible inputs here since there appears to be no way to
+                // inject the view template's sighting variables in loop format into a script
+                // tag. Below we loop through them creating the inputs, then grab them using
+                // a jquery selector and call the showOnMap() function, abusing the value 
+                // property accordingly. Super hacksauce.
+                $("input").each(function(index) {
+                    var coords = $(this).val().split("|");
+                    var lat = coords[0];
+                    var lon = coords[1];
+                    showOnMap( lat, lon, map );
+                });
+            })
+
+        - sightings.forEach(function(sighting){
+            <input type='hidden' value='#{sighting.latitude}|#{sighting.longitude}' ></input>
+        - })
+
+        div#mapContainer
+        p
+
+    .span4
+        h3 Secondary Content
+        a(href="/sightings/add") Add New Sighting
         ul
           - sightings.forEach(function(sighting){
             li
-                a(href="/sightings/#{sighting._id}") #{sighting.latitude} #{sighting.longitude} - #{sighting.comment}
+                a(href="/sightings/#{sighting._id}") #{sighting.comment}
           - })
-        a(href="/sightings/add") Add New Sighting
-    .span4
-        h3 Secondary content
