--- a/src/views/jade/sighting/show.jade
+++ b/src/views/jade/sighting/show.jade
@@ -3,18 +3,25 @@
     small #{sighting._id}
 .row
   .span10
+    !=partial('messages')
+
     script(src="http://maps.google.com/maps/api/js?sensor=false")
     script(src="/sighting_on_map.js")
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+    script(type="text/javascript")
+      $(document).ready( function() {
+        // TO FIX: WHy is jQuery not helping here?
+        // var map = createMap($("#mapContainer"), $("#latitude").val(), $("#longitude").val(), 4) 
 
-    != "<script type='text/javascript'>"
-    != '$(document).ready( function() { showOnMap( $("#latitude").val(), $("#longitude").val() ) } )'
-    != "</script>"
+        var map = createMap(document.getElementById('mapContainer'), $("#latitude").val(), $("#longitude").val(), 4) 
+        showOnMap( sighting.latitude, sighting.longitude, map )
+      })
 
     input(type='hidden', id='latitude', value='#{sighting.latitude}')
     input(type='hidden', id='longitude', value='#{sighting.longitude}')
 
     div#mapContainer
+    p
     ul
       li Serial: 
         = sighting.serial
@@ -28,7 +35,8 @@
         = sighting.longitude
       li Comment: 
         = sighting.comment
-      li
-        a(href="#{sighting._id}/edit") Edit this sighting
+      - if (everyauth.loggedIn)
+        - if (sighting.submitterId == everyauth.user.id)
+          a(href="#{sighting._id}/edit") Edit your sighting
   .span4
       h3 Secondary content
