--- a/src/views/jade/messages.jade
+++ b/src/views/jade/messages.jade
@@ -1,5 +1,5 @@
 - if (hasMessages)
     - messages().forEach(function(msg){
-        div#wickapow.alert-message.error
+        div(class="alert-message error")
           p= msg
     - })
