organize css/js into subdirs of public

--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -6,7 +6,7 @@
     !=partial('messages')
 
     script(src="http://maps.google.com/maps/api/js?sensor=false")
-    script(src="/user_on_map.js")
+    script(src="/js/user_on_map.js")
 
     div#mapContainer
 
