--- a/src/views/jade/layout.jade
+++ b/src/views/jade/layout.jade
@@ -3,7 +3,7 @@ html
     title
       CashTracker
     link(href="/bootstrap/bootstrap.css", rel="stylesheet")
-    link(type="text/css", rel="stylesheet", href="/style.css")
+    link(type="text/css", rel="stylesheet", href="/css/style.css")
     script(type="text/javascript", src="http://use.typekit.com/hcc0mfz.js")
     script(type="text/javascript")
         try{Typekit.load();}catch(e){}
