--- a/src/views/jade/sighting/show.jade
+++ b/src/views/jade/sighting/show.jade
@@ -6,7 +6,7 @@
     !=partial('messages')
 
     script(src="http://maps.google.com/maps/api/js?sensor=false")
-    script(src="/sighting_on_map.js")
+    script(src="/js/sighting_on_map.js")
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
     script(type="text/javascript")
       $(document).ready( function() {
