fix sighting marker on details page

--- a/src/views/jade/sighting/show.jade
+++ b/src/views/jade/sighting/show.jade
@@ -14,7 +14,7 @@
         // var map = createMap($("#mapContainer"), $("#latitude").val(), $("#longitude").val(), 4) 
 
         var map = createMap(document.getElementById('mapContainer'), $("#latitude").val(), $("#longitude").val(), 4) 
-        showOnMap( sighting.latitude, sighting.longitude, map )
+        showOnMap( $("#latitude").val(), $("#longitude").val(), map )
       })
 
     input(type='hidden', id='latitude', value='#{sighting.latitude}')
