--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -3,7 +3,9 @@ html, body {
   background-color: #eee;
 }
 body {
-  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+  /* No longer needed in responsive-enabled Bootstrap */
+  /* Keeping for reference in case we want a highlight section above the nav a la http://lesscss.org/ */
+  /* padding-top: 40px; */
 }
 .container > footer p {
   text-align: center; /* center align it with the container */
@@ -41,18 +43,6 @@ body {
   background-color: #f5f5f5;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
-}
-
-/* Styles you shouldn't keep as they are for displaying this base example only */
-.content .span7,
-.content .span3 {
-  min-height: 500px;
-}
-/* Give a quick and non-cross-browser friendly divider */
-.content .span3 {
-  margin-left: 0;
-  padding-left: 19px;
-  border-left: 1px solid #eee;
 }
 
 .topbar .btn {
