--- a/src/views/jade/layout.jade
+++ b/src/views/jade/layout.jade
@@ -2,6 +2,7 @@ html
   head
     title
       CashTracker
+    meta(name="viewport", content="user-scalable=no, width=device-width")
     link(href="/bootstrap/bootstrap.css", rel="stylesheet")
     link(type="text/css", rel="stylesheet", href="/css/style.css")
     script(type="text/javascript", src="http://use.typekit.com/hcc0mfz.js")
