--- a/src/views/jade/sighting/index.jade
+++ b/src/views/jade/sighting/index.jade
@@ -2,7 +2,7 @@
     h1 Sightings 
         small avast! thar be a sighting!
 .row
-    .span7
+    .span12
         !=partial('messages')
 
         script(src="http://maps.google.com/maps/api/js?sensor=false")
@@ -33,14 +33,35 @@
         - })
 
         div#mapContainer
-        p
 
-    .span3
-        a(href="/sightings/add")
-            button(class="btn primary", type="submit", value="Update") Add New Sighting          
-        p
-        ul
-          - sightings.forEach(function(sighting){
-            li
-                a(href="/sightings/#{sighting._id}") #{sighting.comment}
-          - })
+        table
+            thead
+                tr
+                    th Serial
+                    th Latitude
+                    th Longitude
+                    th Comment
+            tbody
+                - sightings.forEach(function(sighting){
+                    tr
+                        td
+                            a(href="/sightings/#{sighting._id}")
+                                = sighting.serial
+                        td
+                            = sighting.latitude
+                        td
+                            = sighting.longitude
+                        td
+                            = sighting.comment
+
+                - })
+
+    //- .span3
+    //-     a(href="/sightings/add")
+    //-         button(class="btn primary", type="submit", value="Update") Add New Sighting          
+    //-     p
+    //-     ul
+    //-       - sightings.forEach(function(sighting){
+    //-         li
+    //-             a(href="/sightings/#{sighting._id}") #{sighting.comment}
+    //-       - })
