improve sighting details page

--- a/src/views/jade/sighting/edit.jade
+++ b/src/views/jade/sighting/edit.jade
@@ -24,6 +24,6 @@
       p Comment (Optional):
         input(type="text", name="sighting[comment]", value="#{sighting.comment}")
       p
-        button(class="btn primary", type="submit", value="Update") Fire away
+        button(class="btn primary", type="submit", value="Update") Update
   .span3
       h3 Secondary content
