removed ridiculous man, added information about the page

--- a/src/views/jade/home/index.jade
+++ b/src/views/jade/home/index.jade
@@ -1,12 +1,32 @@
 .page-header
     h1 Welcome 
-        small to the playground of the Johnny Appleseed of Cunt!
+        small
 .row
-    .span7
+    .span9
         !=partial('messages')
 
-        h2 why!?
-        img(src="/images/ridiculous.jpg", alt="i don't know!")
-    .span3
-        a(href="/sightings/add")
-            button(class="btn primary", type="submit", value="Update") Add New Sighting
+        h2 What's this all about?
+
+        p The site was built in the spirit of 
+            a(href="http://wheresgeorge.com") Where's George
+            . You add sightings of particular Euro bills and it makes a geocode lookup of your location to store an entry for that bill's serial number. You can authenticate with Facebook and track your entered bills to see where else in the world they have been spotted.
+        p This site is a rudimentary example that explores the capabilities of:
+            ul
+                li
+                    a(href="http://nodejs.org") node.js
+                li
+                    a(href="http://expressjs.com") Express
+                li
+                    a(href="http://mongodb.com") MongoDB
+                li
+                    a(href="http://coffeescript.org/") CoffeeScript
+                li Twitter's  
+                    a(href="http://twitter.github.com/bootstrap/") Bootstrap library
+        
+        p The site was built entirely in CoffeeScript BDD-style. Upon saving any file, a Jitter task compiles the CoffeeScript files into JavaScript, then runs a series of Mocha tests which, if they pass, trigger a restart of the local node.js server. URL routing happens via a rough Model-View-Controller model based on Express. HTML views are built using Jade, a templating framework. With a lot of help from Bootstrap's newest additions in version 2.0, the site is responsive; page elements flow naturally no matter what device you use.
+
+        p Thanks to 
+            a(href="http://nodejitsu.com") Nodejitsu
+            ,   for making deployment one-liner easy!
+
+        p More technical details are in README file in the source.
