--- a/src/views/jade/account/index.jade
+++ b/src/views/jade/account/index.jade
@@ -12,8 +12,7 @@
                 thead
                     tr
                         th Serial
-                        th Latitude
-                        th Longitude
+                        th Location
                         th Comment
                 tbody
                     - sightings.forEach(function(sighting){
@@ -22,9 +21,7 @@
                                 a(href="/sightings/#{sighting._id}")
                                     = sighting.serial
                             td
-                                = sighting.latitude
-                            td
-                                = sighting.longitude
+                                = sighting.location
                             td
                                 = sighting.comment
 
