--- a/src/views/jade/sighting/add.jade
+++ b/src/views/jade/sighting/add.jade
@@ -6,9 +6,12 @@
     !=partial('messages')
 
     script(src="http://maps.google.com/maps/api/js?sensor=false")
+    script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+    script(src="/js/gmap3.js")
     script(src="/js/user_on_map.js")
 
     div#mapContainer
+    div#gMap3Container
 
     p
 
@@ -24,6 +27,8 @@
         input(type="text", id="latitudeInput", name="sighting[latitude]", value="#{sighting.latitude}")
       p Longitude: 
         input(type="text", id="longitudeInput", name="sighting[longitude]", value="#{sighting.longitude}")
+      p Location: 
+        input(type="text", id="locationInput", name="sighting[location]", value="#{sighting.location}")
       p Comment (Optional): 
         input(type="text", name="sighting[comment]", value="#{sighting.comment}")
       p
